ingress-test/k8s-ingress/ambassador-ingress-setup/ambassador-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ambassador
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - port: 80
      targetPort: 8080
  selector:
    service: ambassador
  externalIPs:
    - 192.168.49.2
