ingress-test/k8s-ingress/ambassador-ingress-setup/name-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
#    kubernetes.io/ingress.class: ambassador
  name: my-ingress
spec:
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              serviceName: hello-world
              servicePort: 3000
    - host: dog.example.com
      http:
        paths:
          - backend:
              serviceName: dogpic-service
              servicePort: 3000
